tests/solidity/bad/onlytests.sol
contract Abstract {
  function scfuzzer_f() pure public returns (int) {return 0;}
}
